[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcsuper"
version = "2.1.0.post1"
description = "QCSuper is a tool communicating with Qualcomm-based phones and modems, allowing to capture raw 2G/3G/4G radio frames, among other things"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "P1 Security - Marin Moulinier" }]
keywords = ["pcap", "wireshark", "radio", "qcsuper", "capture analysis"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: Communications :: Telephony",
    "Topic :: Security",
    "Environment :: Console"
]
dependencies = [
    "crcmod>=1.7",
    "pycrate>=0.7.0",
    "pyserial>=3.5",
    "pyusb>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/P1sec/QCSuper"
Repository = "https://github.com/P1sec/QCSuper"
Issues = "https://github.com/P1sec/QCSuper/issues"

[project.scripts]
qcsuper = "qcsuper.main:main"

[tool.setuptools]
include-package-data = true
package-dir = { qcsuper = "src" }
packages = [
    "qcsuper",
    "qcsuper.inputs",
    "qcsuper.inputs.adb_bridge",
    "qcsuper.inputs.adb_wsl2_bridge",
    "qcsuper.inputs.external",
    "qcsuper.inputs.external.adb",
    "qcsuper.inputs.external.adb.lib64",
    "qcsuper.protocol",
    "qcsuper.modules",
    "qcsuper.modules.efs_shell_commands",
]

[tool.setuptools.package-data]
"qcsuper.inputs.adb_bridge" = ["*"]
"qcsuper.inputs.adb_wsl2_bridge" = ["*"]
"qcsuper.inputs.external" = ["*"]
"qcsuper.inputs.external.adb" = ["*"]
"qcsuper.inputs.external.adb.lib64" = ["*"]
"qcsuper.modules" = ["wireshark_plugin/*"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
